; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/dxtn/extr_txc_fetch_dxtn.c_fetch_2d_texel_rgb_dxt1.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/dxtn/extr_txc_fetch_dxtn.c_fetch_2d_texel_rgb_dxt1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fetch_2d_texel_rgb_dxt1(i32 %0, i32* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %6, align 4
  %14 = add nsw i32 %13, 3
  %15 = sdiv i32 %14, 4
  %16 = load i32, i32* %9, align 4
  %17 = sdiv i32 %16, 4
  %18 = mul nsw i32 %15, %17
  %19 = load i32, i32* %8, align 4
  %20 = sdiv i32 %19, 4
  %21 = add nsw i32 %18, %20
  %22 = mul nsw i32 %21, 8
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %12, i64 %23
  store i32* %24, i32** %11, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = load i32, i32* %8, align 4
  %27 = and i32 %26, 3
  %28 = load i32, i32* %9, align 4
  %29 = and i32 %28, 3
  %30 = load i32*, i32** %10, align 8
  %31 = call i32 @dxt135_decode_imageblock(i32* %25, i32 %27, i32 %29, i32 0, i32* %30)
  ret void
}

declare dso_local i32 @dxt135_decode_imageblock(i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
